# openapi-to-asciidoc

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: publish_development_complete.yml
.github/workflows/: build.yml  check_release.yml  lint.yml  linting.yml  publish-development.yml  publish-production.yml  publish_development.yml  publish_development_reusable.yml  publish_gh_pages.yml  publish_production.yml  publish_pypi_prod.yml  publish_pypi_test.yml  pypi-build-n-publish.yml
.github/workflows/templates/: build.yml  linting.yml
openapi_to_asciidoc/templates/: example_obj.j2  info_obj.j2  parameter_obj.j2  xml_obj.j2
src/openapi_to_asciidoc/: convert.py  objects.py  render.py
src/openapi_to_asciidoc/templates/: callback_obj.j2  components_obj.j2  contact_obj.j2  discriminator_obj.j2  encoding_obj.j2  external_docs_obj.j2  header_obj.j2  license_obj.j2  link_obj.j2  media_type_obj.j2  oauth_flow_obj.j2  oauth_flows_obj.j2  openapi_obj.j2  operation_obj.j2  path_item_obj.j2  paths_obj.j2  request_body_obj.j2  response_obj.j2  schema_obj.j2  security_requirement_obj.j2  security_scheme_obj.j2  server_obj.j2  server_variable_obj.j2  specification_extension.j2  tag_obj.j2  util.j2
tests/resources/: test.json
tests/unit/openapi_to_asciidoc/: test_convert.py
