[build-system]
requires = ["hatchling", "hatch-vcs", "build", "twine"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["-s", "--import-mode=importlib"]
pythonpath = [".", "src", "tests"]
testpaths = ["tests/unit"]

[project]
name = "openapi-to-asciidoc"
dynamic = ["version"]
authors = [{ name = "LFV", email = "info@lfv.se" }]

description = "A tool used to convert OpenAPI 3.1 specifications to AsciiDoc"
readme = "README.md"

requires-python = ">=3.10"

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Operating System :: OS Independent",
]

dependencies = [
  "jinja2 >= 3.1.2",
  "jinja2-cli >= 0.8.2",
  "marshmallow >= 3.19.0",
]

[project.scripts]
o2a = "openapi_to_asciidoc.convert:main"
openapi-to-asciidoc = "openapi_to_asciidoc.convert:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.envs.test]
dependencies = ["pytest", "pytest-sugar", "pytest-cov"]

[tool.hatch.envs.lint]
detached = true
dependencies = ["black", "flake8", "flake8-pyproject"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
ignore = ["W503"]
max-line-length = 120
# exclude = tests/*
max-complexity = 10
